--- a/style2.css
+++ b/style2.css
@@ -10,7 +10,7 @@ body {
 
 .container {
     display: flex;
-    height: 100vh;
+    min-height: 100vh;
 }
 
 /* Bagian Kiri */
@@ -33,42 +33,23 @@ body {
     object-fit: cover;
 }
 
-.personal-info {
-    text-align: center;
-    width: 100%;
-}
-
 .personal-info h1 {
     font-size: 24px;
     margin-bottom: 10px;
+    text-align: center;
 }
 
 .personal-info h2 {
     font-size: 18px;
-    margin-top: 20px;
-    text-transform: uppercase;
+    margin: 20px 0 10px;
     border-bottom: 2px solid #1abc9c;
     display: inline-block;
-    margin-bottom: 10px;
-}
-
-.personal-info p, ul {
-    font-size: 16px;
-    margin: 5px 0;
 }
 
 .personal-info ul {
-    list-style-type: disc;
-    padding-left: 20px;
-}
-
-.personal-info a {
-    color: #1abc9c;
-    text-decoration: none;
-}
-
-.personal-info a:hover {
-    text-decoration: underline;
+    list-style: none;
+    padding: 0;
+    font-size: 16px;
 }
 
 /* Bagian Kanan */
@@ -78,28 +59,28 @@ body {
     overflow-y: auto;
 }
 
-.section {
-    margin-bottom: 20px;
-}
-
 .section h2 {
     font-size: 20px;
     color: #2c3e50;
     margin-bottom: 10px;
-    border-bottom: 2px solid #1abc9c;
-    padding-bottom: 5px;
 }
 
-.section ul {
-    list-style-type: none;
-    padding: 0;
-}
+/* Logika untuk print */
+@media print {
+    body {
+        background-color: white;
+        color: black;
+    }
 
-.section ul li {
-    background-color: #eaf2f8;
-    margin: 5px 0;
-    padding: 10px;
-    border-radius: 5px;
-    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
-    font-size: 16px;
+    .container {
+        display: block;
+    }
+
+    .left, .right {
+        width: 100%;
+    }
+
+    .photo-section img {
+        margin-bottom: 10px;
+    }
 }
